--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -133,6 +133,9 @@
 /* Positioning the dropdowns correctly */
 .nav-item {
   position: relative;
+  
+  z-index: 1002;
+
 }
 
 /* My Account Button */
@@ -213,7 +216,7 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 150px;
+    top: 130px;
     right: 0;
     background: #000000;
     width: 100%;
@@ -365,4 +368,3 @@
     border-bottom: none;
   }
 }
-
